@@ -1,3 +1,4 @@
+- STARKA-135 add strand bias feature
 - STARKA-138 add read position features to strelka SNV output
 - STARKA-136 add mapping info values to strelka SNV output
 v2.1.5
